[tool.poetry] 
name = "test-app"
version = "0.1.0"
description = "Test poetry"
authors = ["Somebody <somebody@somewhere.test>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
fastapi = "^0.55.1"
uvicorn = "^0.11.5"
httpx = "^0.16.1"

[tool.poetry.dev-dependencies]
coverage = "^5.1"
flake8 = "^3.8.2"
pep8-naming = "^0.10.0"
pytest = "^6.0.0"
pytest-mock = "^3.1.0"
requests = "^2.23.0"
pytest-httpx = "^0.10.1"
pytest-aiohttp = "^0.3.0"
pytest-datadir = "^1.3.1"
black = "^21.5b0"
isort = "^5.8.0"
mypy = "^0.812"

[tool.poetry.scripts]
interconnect = "interconnect.Cli:Cli.main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
